--- a/.gitignore
+++ b/.gitignore
@@ -192,4 +192,5 @@ pyrightconfig.json
 .history
 .ionide
 
+reports/
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
